Fix not hidden adress bar on mobile browsers

--- a/frontend/src/app/app.style.css
+++ b/frontend/src/app/app.style.css
@@ -1,5 +1,5 @@
 #dr-drawer-close {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   z-index: 50;
@@ -118,7 +118,7 @@
 }
 
 .dr-drawer {
-  position: absolute;
+  position:fixed;
   width: 300px;
   height: 100%;
   background-color: black;
@@ -160,18 +160,7 @@
 }
 
 #dr-hamburger {
-  position: absolute;
-  left: 0px;
-  padding: 20px;
-  height: 40px;
-  width: 50px;
-  transition: all 1000ms ease-in-out;
-  color: white;
-  z-index: 10;
-}
-
-#dr-hamburger {
-  position: absolute;
+  position: fixed;
   left: 0px;
   padding: 20px;
   height: 40px;
