--- a/frontend/src/app/gallery.style.css
+++ b/frontend/src/app/gallery.style.css
@@ -20,8 +20,6 @@
 }
 
 #dr-column-container {
-  height: 100%;
-  overflow-y: scroll;
   display: flex;
   flex-direction: row;
   background-color: rgba(0, 0, 0, 0.5);
